<resources>
    <string name="app_name">Speedo Meter</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_000">000</string>
    <string name="km_h">Km/h</string>
    <string name="avg_speed">Avg Speed</string>
    <string name="max_speed">Max Speed</string>
    <string name="km">km</string>
    <string name="distance">Distance</string>
    <string name="start_trip">Start Trip</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="resume">Resume</string>
    <string name="latitude">Latitude</string>
    <string name="speed">Speed</string>
    <string name="longitude">Longitude</string>
    <string name="_0">0</string>
    <string name="delete">Delete</string>
    <string name="to">to</string>
</resources>