<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.tabs.map.MapFragment">

    <FrameLayout
        android:id="@+id/mapContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="120dp"
        app:layout_constraintBottom_toTopOf="@+id/stats"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:name="com.google.android.gms.maps.SupportMapFragment" />

    </FrameLayout>

    <include
        android:id="@+id/stats"
        layout="@layout/layout_stats"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvSpeedTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/speed"
        app:layout_constraintEnd_toStartOf="@+id/tvLongitudeTitle"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvLatitudeTitle"
        app:layout_constraintTop_toBottomOf="@+id/mapContainer" />

    <TextView
        android:id="@+id/tvLongitudeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/longitude"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvSpeedTitle"
        app:layout_constraintTop_toBottomOf="@+id/mapContainer" />

    <TextView
        android:id="@+id/tvLatitudeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/latitude"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/tvSpeedTitle"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapContainer" />

    <TextView
        android:id="@+id/tvLatitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/_0"
        android:textSize="12sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/tvLatitudeTitle"
        app:layout_constraintStart_toStartOf="@+id/tvLatitudeTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvLatitudeTitle" />

    <TextView
        android:id="@+id/tvSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/_0"
        android:textSize="12sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/tvSpeedTitle"
        app:layout_constraintStart_toStartOf="@+id/tvSpeedTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvSpeedTitle" />

    <TextView
        android:id="@+id/tvLongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/_0"
        android:textSize="12sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/tvLongitudeTitle"
        app:layout_constraintStart_toStartOf="@+id/tvLongitudeTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvLongitudeTitle" />


</androidx.constraintlayout.widget.ConstraintLayout>